# src/WebUI/Server/Services/CurrentUser.cs
@@ -1,0 +1,18 @@
+﻿using CleanArchitectureBlazor.Application.Common.Services.Identity;
+using System.Security.Claims;
+
+namespace CleanArchitectureBlazor.WebUI.Server.Services;
+
+public class CurrentUser : ICurrentUser
+{
+    private readonly IHttpContextAccessor _httpContextAccessor;
+
+    public CurrentUser(IHttpContextAccessor httpContextAccessor)
+    {
+        _httpContextAccessor = httpContextAccessor;
+    }
+
+    public string? UserId => _httpContextAccessor.HttpContext?
+                            .User?
+                            .FindFirstValue(ClaimTypes.NameIdentifier);
+}
